Relase History
==============

v0.0.7 -- February 24, 2015
---------------------------
New Features
~~~~~~~~~~~~
* Debugging output enabled by global flags:
** `*dump-kl*` causes the KLambda code received by the compiler to be dumped
   to stdout.
** `*dump-rb*` causes the Ruby code generated by the compiler to be dumped
   to stdout.
** `*include-backtrace-in-error-string*` causes the backtrace from the error
   object to be appended to the string returned by error-to-string.

Bug Fixes
~~~~~~~~~
* Carriage return and new line are now properly escaped in emitted Ruby code. This
  fixes "warning: encountered \r in middle of line, treated as a mere space" messages
  that show up, e.g., when using a unit string like "c#13;" in Shen.

v0.0.6 -- February 1, 2015
--------------------------
Breaking Changes
~~~~~~~~~~~~~~~~
* `rb-send-block` no longer takes an arity argument.

v0.0.5 -- January 31, 2015
--------------------------
New Features
~~~~~~~~~~~~
* `Klam::Absvector` is now enumerable

v0.0.4 -- January 30, 2015
--------------------------
New Features
~~~~~~~~~~~~
* `Klam::Cons` is now enumerable
* Added `rb-send-block` primitive

v0.0.3 -- January 28, 2015
--------------------------
New Features
~~~~~~~~~~~~
* Added `rb-const` and `rb-send` primitives

v0.0.2 -- January 7, 2015
-------------------------
Bug Fixes
~~~~~~~~~
* Added bounds checking for absvectors

v0.0.1 -- January 3, 2015
-------------------------
Initial Release