@@ -173,22 +173,36 @@ module Klam
       end
 
       def emit_loop(form)
-        name_rb = emit_ruby(form[1])
-        params_rb = form[2].map {|v| emit_ruby(v)}
-        expr_rb = emit_ruby(form[3])
-        render_string('(@loop_cache[$1] ||= ::Kernel.lambda { |$2| $3 }).call($2)', name_rb,
-                      params_rb, expr_rb)
+        _, loop_var, expr = form
+        val_var = fresh_variable
+
+        expr_rb = emit_ruby(expr)
+        loop_var_rb = emit_ruby(loop_var)
+        val_var_rb = emit_ruby(val_var)
+
+        render_string(<<-EOT, loop_var_rb, val_var_rb, expr_rb)
+          $1 = false
+          $2 = nil
+          begin
+            $1 = false
+            $2 = $3
+          end while $1
+          $2
+        EOT
       end
 
       def emit_recur(form)
-        _, params, new_value_exprs = form
+        _, params, new_value_exprs, loop_var = form
+        loop_var_rb = emit_ruby(loop_var)
+
         if params.size > 0
           params_rb = params.map { |param| emit_ruby(param) }
           new_value_exprs_rb = new_value_exprs.map { |expr| emit_ruby(expr) }
 
-          render_string('(($1 = $2); redo)', params_rb, new_value_exprs_rb)
+          render_string('(($1 = $2); $3 = true)', params_rb,
+                        new_value_exprs_rb, loop_var_rb)
         else
-          'redo'
+          render_string('$1 = true', loop_var_rb)
         end
       end
 
